--- a/python/interface/SimulatorTool/plots/simulation_config.yaml
+++ b/python/interface/SimulatorTool/plots/simulation_config.yaml
@@ -1,27 +1,14 @@
-adc_yaml: ''
-adv_adc_type: SAR
-bnn_fc1_index: '0'
-bnn_fc2_index: '0'
-bnn_fc3_index: '0'
-bnn_weights_folder: /home/lpei/Workspace/code/neurosim/Data/BNN_weight
-config_adc_config_mode: ''
-config_buffer_config_mode: ''
-config_buffer_yaml: ''
-config_decoder_mode: ''
-config_decoder_yaml: ''
-config_memory_config_mode: ''
-config_memory_tech: ''
-config_memory_yaml: ''
-config_senseamp_mode: ''
-config_senseamp_yaml: ''
-config_technology_node: ''
-device_data_file: /home/lpei/Workspace/code/neurosim/Data/currents_vlsi.csv
-frequency: 1e9
-mode: Memory
-nn_weights_folder: /home/lpei/Workspace/code/neurosim/Data/NN_weight
-pie_config: ''
-precision_mu: '1'
-precision_sigma: '1'
-sampling_times: '100'
-technology: '0'
-weight: A
+bins: 50
+mode: Demo
+mus:
+- 1.0
+- 1.0
+- 1.0
+rng_file: C:/Users/EmilieYe/isure/code/PROMISE/Data/currents_vlsi.csv
+rng_source: Choose file
+sampling_times: 100
+sigmas:
+- 1.0
+- 1.0
+- 1.0
+weight_number: 3
